--- a/index.html
+++ b/index.html
@@ -1,255 +1,243 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <style>
-      .slider-container1 {
-        width: 100%;
-        max-width: 800px;
-        overflow: hidden;
-        position: relative;
-      }
+<!-- CODE FOR THE FIRST SLIDER -->
+<style>
+  .slider-container1 {
+    width: 100%;
+    max-width: 800px;
+    overflow: hidden;
+    position: relative;
+  }
 
-      .slider1 {
-        display: flex;
-        transition: transform 0.4s ease;
-      }
+  .slider1 {
+    display: flex;
+    transition: transform 0.4s ease;
+  }
 
-      .slide1 {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-width: 100%;
-      }
+  .slide1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 100%;
+  }
 
-      .slide1 img {
-        max-width: 100%;
-        max-height: 100%;
-      }
+  .slide1 img {
+    max-width: 100%;
+    max-height: 100%;
+  }
 
-      .slider-controls1 {
-        position: absolute;
-        top: 50%;
-        display: flex;
-        align-items: center;
-        width: 100%;
-      }
+  .slider-controls1 {
+    position: absolute;
+    top: 50%;
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
 
-      .btn1 {
-        cursor: pointer;
-        line-height: 1;
-        font-size: 18px;
-        font-size: 24px;
-        border: none;
-        font-weight: 600;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #ff8a00;
-        background-color: rgba(30, 38, 53, 0.6);
-        padding: 10px;
-        border-radius: 50%;
-        transition: all 0.3s ease-in-out;
-      }
+  .btn1 {
+    cursor: pointer;
+    line-height: 1;
+    font-size: 18px;
+    font-size: 24px;
+    border: none;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ff8a00;
+    background-color: rgba(30, 38, 53, 0.6);
+    padding: 10px;
+    border-radius: 50%;
+    transition: all 0.3s ease-in-out;
+  }
 
-      .btn1:hover,
-      .btn1:focus {
-        background-color: rgba(30, 38, 53, 0.4);
-        color: #d27204;
-      }
+  .btn1:hover,
+  .btn1:focus {
+    background-color: rgba(30, 38, 53, 0.4);
+    color: #d27204;
+  }
 
-      .prev-btn1 {
-        position: absolute;
-        left: 20px;
-        transform: translateY(-50%);
-      }
+  .prev-btn1 {
+    position: absolute;
+    left: 20px;
+    transform: translateY(-50%);
+  }
 
-      .next-btn1 {
-        position: absolute;
-        right: 20px;
-        transform: translateY(-50%);
-      }
-    </style>
-  </head>
-  <body>
-    <div class="slider-container1">
-      <div class="slider1">
-        <div class="slide1">
-          <!-- Change the value for src attribute -->
-          <img
-            src="https://codefinity-content-media.s3.eu-west-1.amazonaws.com/Java_OOP/Debugger_part2%404x.png"
-            alt="Image 1"
-          />
-        </div>
-        <div class="slide1">
-          <img
-            src="https://codefinity-content-media.s3.eu-west-1.amazonaws.com/Java_OOP/Debugger_part3%404x.png"
-            alt="Image 2"
-          />
-        </div>
-        <div class="slide1">
-          <img
-            src="https://codefinity-content-media.s3.eu-west-1.amazonaws.com/Java_OOP/Debugger_4%404x.png"
-            alt="Image 3"
-          />
-        </div>
-      </div>
-      <div class="slider-controls1">
-        <button class="btn1 prev-btn1">&#8592;</button>
-        <button class="btn1 next-btn1">&#8594;</button>
-      </div>
+  .next-btn1 {
+    position: absolute;
+    right: 20px;
+    transform: translateY(-50%);
+  }
+</style>
+
+<div class="slider-container1">
+  <div class="slider1">
+    <div class="slide1">
+      <!-- Change the value for src attribute -->
+      <img
+        src="https://codefinity-content-media.s3.eu-west-1.amazonaws.com/Java_OOP/Debugger_part2%404x.png"
+        alt="Image 1"
+      />
     </div>
-
-    <script>
-      const slider1 = document.querySelector(".slider1");
-      const prevBtn1 = document.querySelector(".prev-btn1");
-      const nextBtn1 = document.querySelector(".next-btn1");
-      let currentSlide1 = 0;
-
-      prevBtn1.addEventListener("click", () => moveToSlide1(-1));
-      nextBtn1.addEventListener("click", () => moveToSlide1(1));
-
-      function moveToSlide1(direction) {
-        currentSlide1 =
-          (currentSlide1 + direction + slider1.children.length) %
-          slider1.children.length;
-        updateSliderPosition1();
-      }
-
-      function updateSliderPosition1() {
-        const slideWidth = slider1.children[0].clientWidth;
-        const translateXValue = -currentSlide1 * slideWidth;
-        slider1.style.transform = `translateX(${translateXValue}px)`;
-      }
-    </script>
-  </body>
-</html>
-
-
-
-<!-- Second -->
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <style>
-      .slider-container2 {
-        width: 100%;
-        max-width: 800px;
-        overflow: hidden;
-        position: relative;
-      }
-
-      .slider2 {
-        display: flex;
-        transition: transform 0.4s ease;
-      }
-      .slide2 {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-width: 100%;
-      }
-
-      .slide2 img {
-        max-width: 100%;
-        max-height: 100%;
-      }
-
-      .slider-controls2 {
-        position: absolute;
-        top: 50%;
-        display: flex;
-        align-items: center;
-        width: 100%;
-      }
-
-      .btn2 {
-        cursor: pointer;
-        line-height: 1;
-        font-size: 18px;
-        font-size: 24px;
-        border: none;
-        font-weight: 600;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #ff8a00;
-        background-color: rgba(30, 38, 53, 0.6);
-        padding: 10px;
-        border-radius: 50%;
-        transition: all 0.3s ease-in-out;
-      }
-
-      .btn2:hover,
-      .btn2:focus {
-        background-color: rgba(30, 38, 53, 0.4);
-        color: #d27204;
-      }
-
-      .prev-btn2 {
-        position: absolute;
-        left: 20px;
-        transform: translateY(-50%);
-      }
-
-      .next-btn2 {
-        position: absolute;
-        right: 20px;
-        transform: translateY(-50%);
-      }
-    </style>
-  </head>
-  <body>
-    <div class="slider-container2">
-      <div class="slider2">
-        <div class="slide2">
-          <!-- Change the value for src attribute -->
-          <img
-            src="https://codefinity-content-media.s3.eu-west-1.amazonaws.com/Java_OOP/Debugger_5%404x.png"
-            alt="Image 1"
-          />
-        </div>
-        <div class="slide2">
-          <img
-            src="https://codefinity-content-media.s3.eu-west-1.amazonaws.com/Java_OOP/Debugger_6%404x.png"
-            alt="Image 2"
-          />
-        </div>
-        <div class="slide2">
-          <img
-            src="https://codefinity-content-media.s3.eu-west-1.amazonaws.com/Java_OOP/Debugger_7%404x.png"
-            alt="Image 3"
-          />
-        </div>
-      </div>
-      <div class="slider-controls2">
-        <button class="btn2 prev-btn2">&#8592;</button>
-        <button class="btn2 next-btn2">&#8594;</button>
-      </div>
+    <div class="slide1">
+      <img
+        src="https://codefinity-content-media.s3.eu-west-1.amazonaws.com/Java_OOP/Debugger_part3%404x.png"
+        alt="Image 2"
+      />
     </div>
+    <div class="slide1">
+      <img
+        src="https://codefinity-content-media.s3.eu-west-1.amazonaws.com/Java_OOP/Debugger_4%404x.png"
+        alt="Image 3"
+      />
+    </div>
+  </div>
+  <div class="slider-controls1">
+    <button class="btn1 prev-btn1" onclick="moveToPrevSlide1()">&#8592;</button>
+    <button class="btn1 next-btn1" onclick="moveToNextSlide1()">&#8594;</button>
+  </div>
+</div>
 
-    <script>
-      // Slider 2 JavaScript
-      const slider2 = document.querySelector(".slider2");
-      const prevBtn2 = document.querySelector(".prev-btn2");
-      const nextBtn2 = document.querySelector(".next-btn2");
-      let currentSlide2 = 0;
+<script>
+  let currentSlide1 = 0;
 
-      prevBtn2.addEventListener("click", () => moveToSlide2(-1));
-      nextBtn2.addEventListener("click", () => moveToSlide2(1));
+  let moveToPrevSlide1 = () => {
+    const slider = document.querySelector(".slider1");
+    currentSlide1 =
+      (currentSlide1 - 1 + slider.children.length) % slider.children.length;
+    updateSliderPosition1();
+  };
 
-      function moveToSlide2(direction) {
-        currentSlide2 =
-          (currentSlide2 + direction + slider2.children.length) %
-          slider2.children.length;
-        updateSliderPosition2();
-      }
+  let moveToNextSlide1 = () => {
+    const slider = document.querySelector(".slider1");
+    currentSlide1 = (currentSlide1 + 1) % slider.children.length;
+    updateSliderPosition1();
+  };
 
-      function updateSliderPosition2() {
-        const slideWidth = slider2.children[0].clientWidth;
-        const translateXValue = -currentSlide2 * slideWidth;
-        slider2.style.transform = `translateX(${translateXValue}px)`;
-      }
-    </script>
-  </body>
-</html>
+  function updateSliderPosition1() {
+    const slider = document.querySelector(".slider1");
+    const slideWidth = slider.children[0].clientWidth;
+    const translateXValue = -currentSlide1 * slideWidth;
+    slider.style.transform = `translateX(${translateXValue}px)`;
+  }
+</script>
+
+<!-- CODE FOR THE SECOND SLIDER -->
+
+<style>
+  .slider-container2 {
+    width: 100%;
+    max-width: 800px;
+    overflow: hidden;
+    position: relative;
+  }
+
+  .slider2 {
+    display: flex;
+    transition: transform 0.4s ease;
+  }
+  .slide2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 100%;
+  }
+
+  .slide2 img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .slider-controls2 {
+    position: absolute;
+    top: 50%;
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+
+  .btn2 {
+    cursor: pointer;
+    line-height: 1;
+    font-size: 18px;
+    font-size: 24px;
+    border: none;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ff8a00;
+    background-color: rgba(30, 38, 53, 0.6);
+    padding: 10px;
+    border-radius: 50%;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .btn2:hover,
+  .btn2:focus {
+    background-color: rgba(30, 38, 53, 0.4);
+    color: #d27204;
+  }
+
+  .prev-btn2 {
+    position: absolute;
+    left: 20px;
+    transform: translateY(-50%);
+  }
+
+  .next-btn2 {
+    position: absolute;
+    right: 20px;
+    transform: translateY(-50%);
+  }
+</style>
+
+<div class="slider-container2">
+  <div class="slider2">
+    <div class="slide2">
+      <!-- Change the value for src attribute -->
+      <img
+        src="https://codefinity-content-media.s3.eu-west-1.amazonaws.com/Java_OOP/Debugger_5%404x.png"
+        alt="Image 1"
+      />
+    </div>
+    <div class="slide2">
+      <img
+        src="https://codefinity-content-media.s3.eu-west-1.amazonaws.com/Java_OOP/Debugger_6%404x.png"
+        alt="Image 2"
+      />
+    </div>
+    <div class="slide2">
+      <img
+        src="https://codefinity-content-media.s3.eu-west-1.amazonaws.com/Java_OOP/Debugger_7%404x.png"
+        alt="Image 3"
+      />
+    </div>
+  </div>
+  <div class="slider-controls2">
+    <button class="btn2 prev-btn2" onclick="moveToPrevSlide2()">&#8592;</button>
+    <button class="btn2 next-btn2" onclick="moveToNextSlide2()">&#8594;</button>
+  </div>
+</div>
+
+<script>
+  let currentSlide2 = 0;
+
+  let moveToPrevSlide2 = () => {
+    const slider = document.querySelector(".slider2");
+    currentSlide2 =
+      (currentSlide2 - 1 + slider.children.length) % slider.children.length;
+    updateSliderPosition2();
+  };
+
+  let moveToNextSlide2 = () => {
+    const slider = document.querySelector(".slider2");
+    currentSlide2 = (currentSlide2 + 1) % slider.children.length;
+    updateSliderPosition2();
+  };
+
+  function updateSliderPosition2() {
+    const slider = document.querySelector(".slider2");
+    const slideWidth = slider.children[0].clientWidth;
+    const translateXValue = -currentSlide2 * slideWidth;
+    slider.style.transform = `translateX(${translateXValue}px)`;
+  }
+</script>
